--- a/scss/mixins/_general.scss
+++ b/scss/mixins/_general.scss
@@ -69,3 +69,87 @@
 	flex-flow: row wrap;
 	justify-content: center;
 }
+
+/* PUSH */
+
+@mixin margin-push($dir: null, $spacing: $spacing-unit) {
+  @if ($dir == left) {
+    margin-left: $spacing;
+  }
+  
+  @else if ($dir == right) {
+    margin-right: $spacing;
+  }
+  
+  @else if ($dir == lr) {
+    margin: {
+      left: $spacing;
+      right: $spacing;
+    }
+  }
+  
+  @else if ($dir == top) {
+    margin-top: $spacing;
+  }
+  
+  @else if ($dir == bottom) {
+    margin-bottom: $spacing;
+  }
+  
+  @else if ($dir == tb) {
+    margin: {
+      top: $spacing;
+      bottom: $spacing;
+    }
+  }
+  
+  @else if (dir == null) {
+    margin: {
+      top: $spacing;
+      right: $spacing;
+      bottom: $spacing;
+      left: $spacing;
+    }
+  }
+}
+
+@mixin padding-push($dir: null, $spacing: $spacing-unit) {
+  @if ($dir == left) {
+    padding-left: $spacing;
+  }
+  
+  @else if ($dir == right) {
+    padding-right: $spacing;
+  }
+  
+  @else if ($dir == lr) {
+    padding: {
+      left: $spacing;
+      right: $spacing;
+    }
+  }
+  
+  @else if ($dir == top) {
+    padding-top: $spacing;
+  }
+  
+  @else if ($dir == bottom) {
+    padding-top: $spacing;
+  }
+  
+  @else if ($dir == tb) {
+    padding: {
+      top: $spacing;
+      bottom: $spacing;
+    }
+  }
+  
+  @else if (dir == null) {
+    padding: {
+      top: $spacing;
+      right: $spacing;
+      bottom: $spacing;
+      left: $spacing;
+    }
+  }
+}
