--- a/templates/temp1.html
+++ b/templates/temp1.html
@@ -21,7 +21,7 @@
       </ul>
     </nav>
   </header>
-  <section>
+  <section class="flex-row">
     <article>
       <h1>Welcome</h1>
       <div>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptates delectus facilis accusamus at earum iusto recusandae distinctio optio, voluptatibus libero, nesciunt velit cupiditate quam. Perspiciatis suscipit eum eaque commodi dignissimos?</div>
