--- a/templates/temp1.pug
+++ b/templates/temp1.pug
@@ -23,7 +23,7 @@ main
           a(href='#find') Find us
         li
           a(href='#contact') Contact us
-  section
+  section.flex-row
     article
       h1 Welcome
       div
