--- a/css/formatting.css
+++ b/css/formatting.css
@@ -12,14 +12,7 @@
 /* PADDING MIXINS */
 /* CLEARFIX MIXIN */
 /* MIN HEIGHT */
-@media only screen and (max-width: 480px) {
-  h1, h2, h3, h4, h5, h6 {
-    text-transform: uppercase; } }
-
-@media only screen and (max-width: 384px) {
-  h1, h2, h3, h4, h5, h6 {
-    text-transform: uppercase; } }
-
+/* PUSH */
 @media only screen and (min-width: 1920px) {
   h1 {
     font-size: 2rem; } }
