--- a/css/mixins.css
+++ b/css/mixins.css
@@ -2,10 +2,4 @@
 /* PADDING MIXINS */
 /* CLEARFIX MIXIN */
 /* MIN HEIGHT */
-@media only screen and (max-width: 480px) {
-  h1, h2, h3, h4, h5, h6 {
-    text-transform: uppercase; } }
-
-@media only screen and (max-width: 384px) {
-  h1, h2, h3, h4, h5, h6 {
-    text-transform: uppercase; } }
+/* PUSH */
