Colors and respective classes added
Colors and .bg- , .color- added.

--- a/css/formatting.css
+++ b/css/formatting.css
@@ -1,13 +1,3 @@
-/**
- * Retrieves a color value from the $material-colors Sass map
- * Inspired by https://github.com/nilskaspersson/Google-Material-UI-Color-Palette/
- *
- * @function
- * @param {string} color-name             - quoted, lower-case, dasherized color
- *                                          name (e.g. 'pink', 'amber')
- * @param {string} [color-variant='500']  - quoted, lowercase color variant (e.g.
- *                                          '200', 'a100')
- */
 /* MARGIN MIXINS */
 /* PADDING MIXINS */
 /* CLEARFIX MIXIN */
@@ -209,3 +199,12 @@ p.footnote {
     vertical-align: sub; }
   p.footnote.invert-color {
     color: #222222; }
+
+a.danger, a.red {
+  color: #EF4836; }
+
+a.success, a.green {
+  color: #87D37C; }
+
+a.message, a.blue {
+  color: #4B77BE; }
