--- a/css/library.css
+++ b/css/library.css
@@ -505,16 +505,120 @@ body {
 /* CLEARFIX MIXIN */
 /* MIN HEIGHT */
 /* PUSH */
-/**
- * Retrieves a color value from the $material-colors Sass map
- * Inspired by https://github.com/nilskaspersson/Google-Material-UI-Color-Palette/
- *
- * @function
- * @param {string} color-name             - quoted, lower-case, dasherized color
- *                                          name (e.g. 'pink', 'amber')
- * @param {string} [color-variant='500']  - quoted, lowercase color variant (e.g.
- *                                          '200', 'a100')
- */
+.bg-white {
+  background-color: #ECF0F1; }
+
+.color-white {
+  color: #ECF0F1; }
+
+.bg-gray {
+  background-color: #6C7A89; }
+
+.color-gray {
+  color: #6C7A89; }
+
+.bg-black {
+  background-color: #333333; }
+
+.color-black {
+  color: #333333; }
+
+.bg-red {
+  background-color: #EF4836; }
+
+.color-red {
+  color: #EF4836; }
+
+.bg-burntorange {
+  background-color: #D35400; }
+
+.color-burntorange {
+  color: #D35400; }
+
+.bg-crustred {
+  background-color: #F2784B; }
+
+.color-crustred {
+  color: #F2784B; }
+
+.bg-orange {
+  background-color: #F64747; }
+
+.color-orange {
+  color: #F64747; }
+
+.bg-caliorange {
+  background-color: #F89406; }
+
+.color-caliorange {
+  color: #F89406; }
+
+.bg-pink {
+  background-color: #D2527F; }
+
+.color-pink {
+  color: #D2527F; }
+
+.bg-purple {
+  background-color: #663399; }
+
+.color-purple {
+  color: #663399; }
+
+.bg-studiopurple {
+  background-color: #8E44AD; }
+
+.color-studiopurple {
+  color: #8E44AD; }
+
+.bg-blue {
+  background-color: 4183D7; }
+
+.color-blue {
+  color: 4183D7; }
+
+.bg-marineblue {
+  background-color: #446CB3; }
+
+.color-marineblue {
+  color: #446CB3; }
+
+.bg-deepblue {
+  background-color: #013243; }
+
+.color-deepblue {
+  color: #013243; }
+
+.bg-lightblue {
+  background-color: #6BB9F0; }
+
+.color-lightblue {
+  color: #6BB9F0; }
+
+.bg-green {
+  background-color: #00e640; }
+
+.color-green {
+  color: #00e640; }
+
+.bg-gossipgreen {
+  background-color: #87D37C; }
+
+.color-gossipgreen {
+  color: #87D37C; }
+
+.bg-salemgreen {
+  background-color: #1E824C; }
+
+.color-salemgreen {
+  color: #1E824C; }
+
+.bg-yellow {
+  background-color: #F7CA18; }
+
+.color-yellow {
+  color: #F7CA18; }
+
 /* MARGIN MIXINS */
 /* PADDING MIXINS */
 /* CLEARFIX MIXIN */
@@ -716,6 +820,15 @@ p.footnote {
     vertical-align: sub; }
   p.footnote.invert-color {
     color: #222222; }
+
+a.danger, a.red {
+  color: #EF4836; }
+
+a.success, a.green {
+  color: #87D37C; }
+
+a.message, a.blue {
+  color: #4B77BE; }
 
 /* Classes */
 /* MARGIN MIXINS */
