--- a/css/stylize.css
+++ b/css/stylize.css
@@ -1,3 +1,7 @@
+*, ::before, ::after {
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box; }
+
 body {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -5,4 +9,6 @@ body {
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
   -ms-flex-flow: column nowrap;
-  flex-flow: column nowrap; }
+  flex-flow: column nowrap;
+  scroll-behavior: smooth;
+  /* Smooth scrolling to anchors without using Javascript or jQuery ( only works in Firefox and Chrome as of writing moment https://caniuse.com/#search=scroll-behavior ) */ }
